# ulolm

./: .gitignore  README.md  build_exe.ps1  data.md  install.ps1  main.py  pyproject.toml  requirements.txt  setup.py  ulolm.json  winget_waiting_room.html
.github/: FUNDING.yml
docs/: agent_framework.md  cli_and_operation.md  memory_system.md  model_architecture.md  roadmap_and_risks.md  system_architecture.md
src/ulolm/: __init__.py  assistant.py  cli.py  config.py  executor.py  generative.py  heuristic.py  memory.py  models.py  router.py  scraper.py
tests/: test_config.py  test_executor.py  test_memory.py  test_router.py
winget/: Aqua-code750.UloLM.installer.yaml  Aqua-code750.UloLM.locale.yaml  Aqua-code750.UloLM.yaml
